// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthProvider.svelte > oauth > should render oauth button 1`] = `
<div>
  <div
    class="flex flex-col gap-2"
    data-auth=""
    data-auth-mode="oauth"
    data-auth-provider="google"
  >
    <!---->
    <button
      data-auth-provider="google"
      data-button="true"
      data-size="md"
      data-style="none"
      data-variant="default"
      type="button"
    >
      <!---->
      <span
        aria-hidden="true"
        class="i-auth-google"
        data-item-icon=""
      />
       
      <span
        data-item-label=""
      >
        Sign in with Google
      </span>
      
      <!---->
    </button>
    
    <!---->
  </div>
  
</div>
`;

exports[`AuthProvider.svelte > oauth > should render oauth button with scopes 1`] = `
<div>
  <div
    class="flex flex-col gap-2"
    data-auth=""
    data-auth-mode="oauth"
    data-auth-provider="azure"
  >
    <!---->
    <button
      data-auth-provider="azure"
      data-button="true"
      data-size="md"
      data-style="none"
      data-variant="default"
      type="button"
    >
      <!---->
      <span
        aria-hidden="true"
        class="i-auth-azure"
        data-item-icon=""
      />
       
      <span
        data-item-label=""
      >
        Sign in with Azure
      </span>
      
      <!---->
    </button>
    
    <!---->
  </div>
  
</div>
`;

exports[`AuthProvider.svelte > otp > should handle errors 1`] = `
<div>
  <div
    class="flex flex-col gap-2"
    data-auth=""
    data-auth-mode="otp"
    data-auth-provider="magic"
  >
    <form
      class="flex w-full flex-col gap-2 "
    >
      <div
        data-field-empty="false"
        data-field-root="true"
        data-field-type="email"
        data-has-icon="true"
      >
        <div
          aria-label="magic link"
          data-field=""
        >
          <label
            for="magic"
          >
            magic link
          </label>
          <!---->
           
          <!---->
          <div
            data-input-root=""
          >
            <span
              aria-hidden="true"
              class="i-auth-magic"
              data-input-icon=""
            />
            <!---->
             
            <input
              id="magic"
              name="magic"
              placeholder="Sign in with Magic Link"
              type="email"
            />
            <!---->
          </div>
          
          <!---->
        </div>
         
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
      <button
        data-auth-provider="magic"
        data-button="true"
        data-size="md"
        data-style="default"
        data-variant="default"
        type="submit"
      >
        <!---->
        Sign in with Magic Link
        
        <!---->
      </button>
      
      <!---->
    </form>
    <!---->
  </div>
  
</div>
`;

exports[`AuthProvider.svelte > otp > should render magic link 1`] = `
<div>
  <div
    class="flex flex-col gap-2"
    data-auth=""
    data-auth-mode="otp"
    data-auth-provider="magic"
  >
    <form
      class="flex w-full flex-col gap-2 custom"
    >
      <div
        data-field-empty="false"
        data-field-root="true"
        data-field-type="email"
        data-has-icon="true"
      >
        <div
          aria-label="magic link"
          data-field=""
        >
          <label
            for="magic"
          >
            magic link
          </label>
          <!---->
           
          <!---->
          <div
            data-input-root=""
          >
            <span
              aria-hidden="true"
              class="i-auth-magic"
              data-input-icon=""
            />
            <!---->
             
            <input
              id="magic"
              name="magic"
              placeholder="Sign in with Magic Link"
              type="email"
            />
            <!---->
          </div>
          
          <!---->
        </div>
         
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
      <button
        data-auth-provider="magic"
        data-button="true"
        data-size="md"
        data-style="default"
        data-variant="default"
        type="submit"
      >
        <!---->
        Sign in with Magic Link
        
        <!---->
      </button>
      
      <!---->
    </form>
    <!---->
  </div>
  
</div>
`;

exports[`AuthProvider.svelte > otp > should render magic link wth custom class 1`] = `
<div>
  <div
    class="flex flex-col gap-2"
    data-auth=""
    data-auth-mode="otp"
    data-auth-provider="magic"
  >
    <form
      class="flex w-full flex-col gap-2 "
    >
      <div
        data-field-empty="false"
        data-field-root="true"
        data-field-type="email"
        data-has-icon="true"
      >
        <div
          aria-label="magic link"
          data-field=""
        >
          <label
            for="magic"
          >
            magic link
          </label>
          <!---->
           
          <!---->
          <div
            data-input-root=""
          >
            <span
              aria-hidden="true"
              class="i-auth-magic"
              data-input-icon=""
            />
            <!---->
             
            <input
              id="magic"
              name="magic"
              placeholder="Sign in with Magic Link"
              type="email"
            />
            <!---->
          </div>
          
          <!---->
        </div>
         
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
      <button
        data-auth-provider="magic"
        data-button="true"
        data-size="md"
        data-style="default"
        data-variant="default"
        type="submit"
      >
        <!---->
        Sign in with Magic Link
        
        <!---->
      </button>
      
      <!---->
    </form>
    <!---->
  </div>
  
</div>
`;

exports[`AuthProvider.svelte > otp > should render magic link wth custom class 2`] = `
<div>
  <div
    class="flex flex-col gap-2"
    data-auth=""
    data-auth-mode="otp"
    data-auth-provider="otp"
  >
    <form
      class="flex w-full flex-col gap-2 custom"
    >
      <div
        data-field-empty="false"
        data-field-root="true"
        data-field-type="email"
        data-has-icon="true"
      >
        <div
          aria-label="magic link"
          data-field=""
        >
          <label
            for="magic"
          >
            magic link
          </label>
          <!---->
           
          <!---->
          <div
            data-input-root=""
          >
            <span
              aria-hidden="true"
              class="i-auth-otp"
              data-input-icon=""
            />
            <!---->
             
            <input
              id="magic"
              name="magic"
              placeholder="Send me a link"
              type="email"
            />
            <!---->
          </div>
          
          <!---->
        </div>
         
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
      <button
        data-auth-provider="otp"
        data-button="true"
        data-size="md"
        data-style="default"
        data-variant="default"
        type="submit"
      >
        <!---->
        Send me a link
        
        <!---->
      </button>
      
      <!---->
    </form>
    <!---->
  </div>
  
</div>
`;

exports[`AuthProvider.svelte > password > should handle errors 1`] = `
<div>
  <div
    class="flex flex-col gap-2"
    data-auth=""
    data-auth-mode="password"
    data-auth-provider="email"
  >
    <form>
      <div
        data-field-empty="false"
        data-field-root="true"
        data-field-type="email"
        data-has-icon="true"
      >
        <div
          aria-label="email"
          data-field=""
        >
          <label
            for="email"
          >
            email
          </label>
          <!---->
           
          <!---->
          <div
            data-input-root=""
          >
            <span
              aria-hidden="true"
              class="i-auth-email"
              data-input-icon=""
            />
            <!---->
             
            <input
              autocomplete="email"
              id="email"
              name="email"
              type="email"
            />
            <!---->
          </div>
          
          <!---->
        </div>
         
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <div
        data-field-empty="false"
        data-field-root="true"
        data-field-type="password"
        data-has-icon="true"
      >
        <div
          aria-label="Password"
          data-field=""
        >
          <label
            for="password"
          >
            Password
          </label>
          <!---->
           
          <!---->
          <div
            data-input-root=""
          >
            <span
              aria-hidden="true"
              class="i-auth-password"
              data-input-icon=""
            />
            <!---->
             
            <input
              autocomplete="current-password"
              id="password"
              name="password"
              type="password"
            />
            <!---->
          </div>
          
          <!---->
        </div>
         
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
      <button
        class="col-start-3 mt-4 h-10 cursor-pointer rounded bg-purple-600 text-center text-white hover:bg-purple-700"
        data-auth-mode="password"
        data-button="true"
        data-size="md"
        data-style="default"
        data-variant="default"
        type="submit"
      >
        <!---->
        Sign in
        
        <!---->
      </button>
      
      <!---->
    </form>
    <!---->
  </div>
  
</div>
`;

exports[`AuthProvider.svelte > password > should render email/password auth 1`] = `
<div>
  <div
    class="flex flex-col gap-2"
    data-auth=""
    data-auth-mode="password"
    data-auth-provider="email"
  >
    <form>
      <div
        data-field-empty="false"
        data-field-root="true"
        data-field-type="email"
        data-has-icon="true"
      >
        <div
          aria-label="email"
          data-field=""
        >
          <label
            for="email"
          >
            email
          </label>
          <!---->
           
          <!---->
          <div
            data-input-root=""
          >
            <span
              aria-hidden="true"
              class="i-auth-email"
              data-input-icon=""
            />
            <!---->
             
            <input
              autocomplete="email"
              id="email"
              name="email"
              type="email"
            />
            <!---->
          </div>
          
          <!---->
        </div>
         
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <div
        data-field-empty="false"
        data-field-root="true"
        data-field-type="password"
        data-has-icon="true"
      >
        <div
          aria-label="Password"
          data-field=""
        >
          <label
            for="password"
          >
            Password
          </label>
          <!---->
           
          <!---->
          <div
            data-input-root=""
          >
            <span
              aria-hidden="true"
              class="i-auth-password"
              data-input-icon=""
            />
            <!---->
             
            <input
              autocomplete="current-password"
              id="password"
              name="password"
              type="password"
            />
            <!---->
          </div>
          
          <!---->
        </div>
         
        <!---->
         
        <!---->
      </div>
      <!---->
       
      <!---->
      <button
        class="col-start-3 mt-4 h-10 cursor-pointer rounded bg-purple-600 text-center text-white hover:bg-purple-700"
        data-auth-mode="password"
        data-button="true"
        data-size="md"
        data-style="default"
        data-variant="default"
        type="submit"
      >
        <!---->
        Sign in
        
        <!---->
      </button>
      
      <!---->
    </form>
    <!---->
  </div>
  
</div>
`;
